fix alignment

--- a/client/src/landingPage/landingPage.css
+++ b/client/src/landingPage/landingPage.css
@@ -1,10 +1,10 @@
 .landing-page {
     display: flex;
     flex-direction: row;
-    height: 100vh;
-    width: 100vw;
-    align-items: center;
-    padding: 0;
+    height: 50vh;
+    width: 70vw;
+    align-items: space-between;
+    padding: 20px;
   }
   
   .landing-page__section {
